# TewDew

./: .gitignore  .prettierrc.yaml  README.md  package-lock.json  package.json  pnpm-lock.yaml
apps/canoe/: .eslintrc.js  index.html  package.json  tailwind.config.cjs  tsconfig.json
apps/canoe/src/: App.tsx  LandingPage.tsx  Login.tsx  Register.tsx  main.tsx  urql.tsx
apps/canoe/src/components/: InputField.tsx
apps/canoe/src/contexts/: Notifications.tsx
apps/canoe/src/routes/: root.tsx  routes.ts
apps/canoe/src/urql/: client.tsx  index.tsx  mutations.tsx  queries.tsx  utils.ts
apps/raft/: .eslintrc.cjs  index.html  package.json  tailwind.config.cjs
apps/raft/src/: ErrorPage.tsx  LandingPage.tsx  Login.tsx  Register.tsx  Root.tsx  main.tsx  routes.ts
apps/squid/: .env  Cargo.toml  README.md  Rocket.toml  configuration.yaml
apps/squid/migrations/: 20230106005434_create_users_table.sql  20230130002858_create_tewdew_table.sql  20230130005855_make_tewdew_description_nullable.sql  20230205174025_create_task_table.sql  20230307003351_add_createdat_updatedat_tewdew.sql  20230315003035_add_createdat_updatedat_tasks.sql
apps/squid/scripts/: init_db.sh
apps/squid/src/: configuration.rs  errors.rs  lib.rs  main.rs  schema.rs
apps/squid/src/jwt/: errors.rs  mod.rs  models.rs  utils.rs
apps/squid/src/schema/: lib.rs  middleware.rs  mod.rs  models.rs  users.rs
apps/squid/src/tewdew/: errors.rs  mod.rs  models.rs  services.rs
apps/squid/src/tewdew/models/: mod.rs  new_tew_dew.rs  updated_tew_dew.rs
apps/squid/src/tewdew/resolvers/: mutations.rs  queries.rs
apps/squid/src/tewdew/task/: errors.rs  mod.rs  services.rs
apps/squid/src/tewdew/task/models/: mod.rs  new_task.rs  updated_task.rs
apps/squid/src/tewdew/task/resolvers/: mod.rs  mutations.rs
apps/squid/src/user/: errors.rs  mod.rs  models.rs  services.rs  utils.rs
apps/squid/src/user/models/: mod.rs  new_user.rs
apps/squid/src/user/resolvers/: mod.rs  mutations.rs  queries.rs
apps/squid/src/user/resolvers/mutations/: handlers.rs  mod.rs  models.rs
apps/squid/src/validation/: mod.rs
(+33 files in other folders)
