[package]
name = "squid"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "squid"

[dependencies]
rocket = "0.5.0-rc.2"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.11"
argon2 = "0.4.1"
thiserror = "1.0.38"
async-graphql = "5.0.5"
async-graphql-rocket = "5.0.5"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

