[package]
name = "squid"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "squid"

[dependencies]
actix-web = "4.2.1"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.11"
argon2 = "0.4.1"
thiserror = "1.0.38"
async-graphql = { version = "5.0.5", features = ["uuid", "uuid08"] }
async-graphql-actix-web = "5.0.5"
chrono = "0.4.15"
jsonwebtoken = "7"
async-trait = "0.1.63"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

